# huskr

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Cargo.toml  index.html
backend/migrations/: 0001_users.sql  0002_profile_matches_messages.sql  0003_likes.sql  0004_bio_image.sql  0005_message_images.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs
backend/src/api/: likes.rs  matches.rs  messages.rs  mod.rs  profiles.rs  user.rs
backend/src/auth/: backend.rs  mod.rs  routes.rs
frontend/: Cargo.toml  Dioxus.toml  index.html
frontend/assets/styling/: main.css  navbar.css
frontend/css/: base.css  card.css  messages.css  modal.css  nav.css  profile.css  variables.css
frontend/js/: api.js  app.js  router.js  swipe.js
frontend/js/components/: card.js  match-modal.js  navbar.js  toast.js
frontend/js/views/: feed.js  login.js  messages.js  profile.js
frontend/src/: lib.rs  main.rs
frontend/src/views/: feed.rs  mod.rs  my_profile.rs  navbar.rs  register.rs
